--- a/sblog/_config.yml
+++ b/sblog/_config.yml
@@ -33,6 +33,9 @@ mathjax: true
 include: [".htaccess"]
 exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.rb", "tmp", ".less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules", "Gemfile", "Gemfile.lock", "LICENSE", "README.md", "vendor"]
 
+sass:
+    sass_dir: _sass
+    style: compressed
 
 # Site owner
 owner:
